--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,6 +47,11 @@ merges =
 # OCA/account-payment:
 # https://github.com/OCA/account-payment/pull/275
     git https://github.com/Eficent/account-payment.git parts/account-payment12 12.0-mig-account_check_printing_report_dlt103
+# OCA/currency:
+    git https://github.com/Eficent/currency.git parts/currency12 12.0-mig-account_cryptocurrency
+    git https://github.com/Eficent/currency.git parts/currency12 12.0-mig-account_fx_spot
+# OCA/l10n-usa:
+    git https://github.com/Eficent/l10n-usa.git parts/l10n-usa12 12.0-mig-l10n_us_gaap_mis_report
 
 options.db_user = odoo
 options.db_host = False
